<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PushFragment">

    <TextView
        android:id="@+id/ltextv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/lstring"
        android:textSize="5pt"
        app:layout_constraintBottom_toBottomOf="@+id/local"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/local" />

    <Spinner
        android:id="@+id/local"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:entries="@array/local"
        android:spinnerMode="dialog"
        android:textSize="3.5pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sctextv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/sctstring"
        android:textSize="5pt"
        app:layout_constraintBottom_toBottomOf="@+id/sctype"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sctype" />

    <Spinner
        android:id="@+id/sctype"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:entries="@array/sctype"
        android:spinnerMode="dialog"
        android:textSize="3.5pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/local" />

    <TextView
        android:id="@+id/scntextv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/scnstring"
        android:textSize="5pt"
        app:layout_constraintBottom_toBottomOf="@+id/scname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scname" />

    <EditText
        android:id="@+id/scname"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="5.5pt"
        android:fontFamily="@font/font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sctype"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/natextv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/nastring"
        android:textSize="5pt"
        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name" />

    <EditText
        android:id="@+id/name"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="5.5pt"
        android:fontFamily="@font/font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scname"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/birtextv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/birstring"
        android:textSize="5pt"
        app:layout_constraintBottom_toBottomOf="@+id/birth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/birth" />

    <EditText
        android:id="@+id/birth"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="date"
        android:maxLength="6"
        android:hint="@string/hint"
        android:textSize="5.5pt"
        android:fontFamily="@font/font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/passtextv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/passtring"
        android:textSize="5pt"
        app:layout_constraintBottom_toBottomOf="@+id/pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pass" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:textSize="5.5pt"
        android:inputType="number"
        android:fontFamily="@font/font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birth"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/copyright"
        android:textSize="5pt"
        app:layout_constraintBottom_toTopOf="@+id/pushbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/pushbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/pushbtn"
        android:textSize="5pt"
        android:fontFamily="@font/font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>